# Rinne

./: .gitignore  Cargo.toml  README.md
crates/rinne-cli/: Cargo.toml  README.md
crates/rinne-cli/src/: catalog.rs  cli.rs  main.rs  mcp_pool.rs  runner.rs
crates/rinne-cli/src/commands/: config.rs  connect.rs  forget.rs  logs.rs  mcp.rs  mod.rs  skill.rs  status.rs
crates/rinne-cli/src/tui/: complete.rs  index.rs  mod.rs  picker.rs  ui.rs
crates/rinne-cli/tests/: conductor_to_engine.rs  engine_e2e.rs  loop_control.rs
crates/rinne-conductor/: Cargo.toml
crates/rinne-conductor/src/: backend.rs  conductor.rs  lib.rs  parse.rs  prompt.rs
crates/rinne-conductor/tests/: conductor_plan.rs
crates/rinne-config/: Cargo.toml
crates/rinne-config/src/: lib.rs  load.rs  model.rs  paths.rs  skills.rs  write.rs
crates/rinne-config/src/probe/: mod.rs  types.rs
crates/rinne-config/tests/: layering.rs
crates/rinne-core/: Cargo.toml
crates/rinne-core/src/: blackboard.rs  engine.rs  lib.rs  pool.rs  priors.rs  ratchet.rs  registry.rs  state.rs
crates/rinne-core/src/worker/: descriptor.rs  event.rs  exec.rs
crates/rinne-core/tests/: assembler.rs
crates/rinne-loop/: Cargo.toml
crates/rinne-loop/src/: assembler.rs  engine.rs  evaluator.rs  lib.rs  registry.rs
crates/rinne-mcp/: Cargo.toml
crates/rinne-mcp/src/: client.rs  lib.rs  protocol.rs  transport.rs
crates/rinne-mcp/tests/: connect_errors.rs  stdio.rs  timeout.rs
crates/rinne-types/: Cargo.toml
crates/rinne-types/src/: blackboard.rs  dag.rs  error.rs  evaluator.rs  lib.rs  skill.rs
crates/rinne-types/src/worker/: descriptor.rs  exec.rs  mod.rs
crates/rinne-workers/: Cargo.toml
crates/rinne-workers/src/: lib.rs  mock.rs
crates/rinne-workers/src/adapters/: aider.rs  antigravity.rs  claude_code.rs  codex.rs  common.rs  cursor.rs  grok.rs  mod.rs  openai_api.rs  opencode.rs
crates/rinne-workers/src/transport/: http.rs  mod.rs  subprocess.rs
crates/rinne-workers/tests/: harness_smoke.rs  mock_worker.rs  serves_tools.rs  tool_loop.rs
docs/: github-discussions.md
