[package]
name = "rinne-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rinne"
path = "src/main.rs"

[dependencies]
rinne-core.workspace = true
rinne-config.workspace = true
rinne-workers.workspace = true
rinne-conductor.workspace = true

clap.workspace = true
tokio.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
ratatui.workspace = true
crossterm.workspace = true
