[package]
name = "rinne-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rinne-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
figment.workspace = true
directories.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
