[package]
name = "rinne-loop"
description = "The Rinne loop engine: scheduler, context assembler, evaluator gate, cascade loop-back, and stuck-detector, over the Blackboard seam."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rinne-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures-util = "0.3"
tracing.workspace = true
