[package]
name = "rinne-mcp"
description = "A thin, framework-free MCP (Model Context Protocol) client for Rinne: stdio + Streamable HTTP transports, initialize / tools/list / tools/call."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rinne-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
