[package]
name = "rinne-types"
description = "Shared types and trait seams for Rinne: the DAG schema, capability vocabulary, worker contract, and core traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

[dev-dependencies]
serde_json.workspace = true
