[package]
name = "rinne-workers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rinne-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
reqwest.workspace = true
futures-util = "0.3"
thiserror.workspace = true
tracing.workspace = true
